[tool.poetry]
name = "pitch-health-monitor"
version = "0.1.0"
description = ""
authors = ["Julio Cesar de Azeredo <jcdazeredo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
pymongo = "^4.6.1"
python-dotenv = "^1.0.1"
pydantic = "^2.6.1"
pytz = "^2024.1"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^24.2.0", allow-prereleases = true}
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
